newest bioage model

--- a/buildBioAgeModel.ipynb
+++ b/buildBioAgeModel.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "75a88658",
+   "metadata": {},
+   "source": [
+    "# This part bulids the bio age model "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e29f450a",
+   "metadata": {},
+   "source": [
+    "## Use clinic outcome data and some related clinic data to calculate a bioage indicator"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "83e7936f",
@@ -34,7 +50,7 @@
     "        weighted_sum = 0\n",
     "        temp_bio_age = 0\n",
     "\n",
-    "        # if the age of the person is younger than 60, we consider them to be young \n",
+    "        # if the age of the person is younger than 60, we consider them to be young, and assign light unhealth indicator weight\n",
     "        if ch_age[i] < 60:\n",
     "\n",
     "            # BMI > 30\n",
@@ -81,7 +97,7 @@
     "\n",
     "            temp_bio_age = ch_age[i] + diff * weighted_sum\n",
     "\n",
-    "        elif ch_age[i] > 80:\n",
+    "        elif ch_age[i] > 80: # old person, assign severe unhealth indicator weight\n",
     "            \n",
     "            # BMI > 30\n",
     "            if Clininc_Data[5][i] == 0:\n",
@@ -127,7 +143,7 @@
     "\n",
     "            temp_bio_age = ch_age[i] - diff * weighted_sum\n",
     "\n",
-    "        # if the sample's age is close to US average life expectancy\n",
+    "        # if the sample's age is close to US average life expectancy, assign intermediate unhealth indicator weight\n",
     "        else: \n",
     "\n",
     "            # BMI > 30\n",
@@ -180,6 +196,14 @@
     "\n",
     "        temp_bio_age = round(temp_bio_age,1)\n",
     "        bio_age_indicator.append(temp_bio_age)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4a22d5a",
+   "metadata": {},
+   "source": [
+    "## Use PCA approach to bulid the actual bio age model by using bio age indicator from above part"
    ]
   },
   {
@@ -242,10 +266,16 @@
       "CA - BA <= 0 case: 3285\n",
       "CA - BA <= 0 ratio: 0.7202367901775927\n",
       "--------------------------------------heath/unhealth comparison---------------------------------\n",
+      "--------------------------------------unhealthSTAT---------------------------------\n",
       "CA_diease_mean 58.95527296645472\n",
       "BA_diease_mean 63.17361686265592\n",
+      "CA_diease_std 8.391809567120877\n",
+      "BA_diease_std 9.603049323414155\n",
+      "--------------------------------------healthSTAT---------------------------------\n",
       "CA_health_mean 55.27241527241527\n",
-      "BA_health_mean 54.89734738082933\n"
+      "BA_health_mean 54.89734738082933\n",
+      "CA_health_std 6.755934401414406\n",
+      "BA_health_std 8.762875142197721\n"
      ]
     }
    ],
@@ -257,6 +287,17 @@
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.preprocessing import StandardScaler \n",
     "import csv\n",
+    "\n",
+    "# Analyze the number of cases and ratios that chronic age is less than bio age for all diease person\n",
+    "def analyze_disease(outcome,CA_original,BA,disease_ind,disease_name):\n",
+    "    diease = outcome[:,disease_ind]\n",
+    "    diease_ind = diease == 1\n",
+    "    print(\"--------------------------------------\",disease_name,\"---------------------------------\")\n",
+    "    print(\"total case:\",np.count_nonzero(diease == 1))\n",
+    "    diff = CA_original[diease_ind] - BA[diease_ind]\n",
+    "    print(\"CA - BA <= 0 case:\",np.count_nonzero(diff <= 0))\n",
+    "    print(\"CA - BA <= 0 ratio:\",np.count_nonzero(diff <= 0)/np.count_nonzero(diease == 1))\n",
+    "    return\n",
     "\n",
     "Clininc_Data,Outcome_Data,CT_Data = read_inputs()\n",
     "bio_age_indicator = np.array(bio_age_indicator)\n",
@@ -290,7 +331,6 @@
     "mean_CA = np.mean(CA,axis = 0)\n",
     "std_CA = np.std(CA,axis = 0)\n",
     "\n",
-    "\n",
     "B_score = np.zeros(ct.shape[0])\n",
     "for i in range (ct.shape[0]):\n",
     "    B_score_current = 0\n",
@@ -306,36 +346,28 @@
     "BA = BA + Z\n",
     "np.savetxt(\"bioAge.csv\", BA, fmt='%f',delimiter=\",\")\n",
     "\n",
-    "  # the predictions are:\n",
-    "    # Idx 1 -> CVD\n",
-    "    # Idx 3 -> Heart Failure\n",
-    "    # Idx 5 -> MI DX\n",
-    "    # Idx 7 -> Type 2 Diabetes\n",
-    "    # Idx 9 -> Femoral Neck Fracture\n",
-    "    # Idx 11 -> Unspec Femoral Fracture\n",
-    "    # Idx 13 -> Forearm Fracture\n",
-    "    # Idx 15 -> Humerus Fracture\n",
-    "    # Idx 17 -> Pathologic Fracture\n",
-    "    # Idx 19 -> Alzheimers\n",
-    "    # Idx 21 -> Cancer (weather the patience has or doesn't have, regardless of 1 or 2 types)\n",
+    "# the predictions are:\n",
+    "# Idx 1 -> CVD\n",
+    "# Idx 3 -> Heart Failure\n",
+    "# Idx 5 -> MI DX\n",
+    "# Idx 7 -> Type 2 Diabetes\n",
+    "# Idx 9 -> Femoral Neck Fracture\n",
+    "# Idx 11 -> Unspec Femoral Fracture\n",
+    "# Idx 13 -> Forearm Fracture\n",
+    "# Idx 15 -> Humerus Fracture\n",
+    "# Idx 17 -> Pathologic Fracture\n",
+    "# Idx 19 -> Alzheimers\n",
+    "# Idx 21 -> Cancer (weather the patience has or doesn't have, regardless of 1 or 2 types)\n",
     "\n",
     "diseaseNames = np.array([\"CVD\",\"Heart Failure\",\"MI DX\",\"Type 2 Diabetes\",\"Femoral Neck Fracture\"\n",
     "                         ,\"Unspec Femoral Fracture\",\"Forearm Fracture\",\"Humerus Fracture\"\n",
     "                         ,\"Pathologic Fracture\",\"Alzheimers\",\"Cancer\"])\n",
     "print(diseaseNames.shape)\n",
-    "def analyze_disease(outcome,CA_original,BA,disease_ind,disease_name):\n",
-    "    diease = outcome[:,disease_ind]\n",
-    "    ind = diease == 1\n",
-    "    print(\"--------------------------------------\",disease_name,\"---------------------------------\")\n",
-    "    print(\"total case:\",np.count_nonzero(diease == 1))\n",
-    "    diff = CA_original[ind] - BA[ind]\n",
-    "    print(\"CA - BA <= 0 case:\",np.count_nonzero(diff <= 0))\n",
-    "    print(\"CA - BA <= 0 ratio:\",np.count_nonzero(diff <= 0)/np.count_nonzero(diease == 1))\n",
-    "    return\n",
+    "# anaylze all disease cases\n",
     "for i in range(diseaseNames.shape[0]):\n",
     "    analyze_disease(outcome,CA_original,BA,2 * i + 1,diseaseNames[i])\n",
     "\n",
-    "any_diease = outcome[:,[1, 3, 5, 7, 9, 11, 13, 15, 17, 19, 21]]\n",
+    "any_diease = outcome[:,[1, 3, 5, 7, 9, 11, 13, 15, 17, 19, 21]] # all diease case\n",
     "diease_sum = np.sum(any_diease,axis = 1)\n",
     "diease_ind = diease_sum != 0\n",
     "print(\"--------------------------------------all diease---------------------------------\")\n",
@@ -344,16 +376,27 @@
     "print(\"CA - BA <= 0 case:\",np.count_nonzero(diff <= 0))\n",
     "print(\"CA - BA <= 0 ratio:\",np.count_nonzero(diff <= 0)/np.count_nonzero(diease_sum != 0))\n",
     "print(\"--------------------------------------heath/unhealth comparison---------------------------------\")\n",
+    "# Show all diease stat info\n",
+    "print(\"--------------------------------------unhealthSTAT---------------------------------\")\n",
     "CA_diease_mean = np.mean(CA_original[diease_ind])\n",
     "BA_diease_mean = np.mean(BA[diease_ind])\n",
+    "CA_diease_std = np.std(CA_original[diease_ind])\n",
+    "BA_diease_std = np.std(BA[diease_ind])\n",
     "print(\"CA_diease_mean\",CA_diease_mean)\n",
     "print(\"BA_diease_mean\",BA_diease_mean)\n",
-    "np.savetxt(\"bscore.csv\", B_score[diease_ind], fmt='%f',delimiter=\",\")\n",
+    "print(\"CA_diease_std\",CA_diease_std)\n",
+    "print(\"BA_diease_std\",BA_diease_std)\n",
+    "# Show all health stat info\n",
+    "print(\"--------------------------------------healthSTAT---------------------------------\")\n",
     "health_ind = diease_sum == 0\n",
     "CA_health_mean = np.mean(CA_original[health_ind])\n",
     "BA_health_mean = np.mean(BA[health_ind])\n",
+    "CA_health_std = np.std(CA_original[health_ind])\n",
+    "BA_health_std = np.std(BA[health_ind])\n",
     "print(\"CA_health_mean\",CA_health_mean)\n",
-    "print(\"BA_health_mean\",BA_health_mean)"
+    "print(\"BA_health_mean\",BA_health_mean)\n",
+    "print(\"CA_health_std\",CA_health_std)\n",
+    "print(\"BA_health_std\",BA_health_std)"
    ]
   }
  ],
