Refined nn models

--- a/project_part1_disease_cancer.ipynb
+++ b/project_part1_disease_cancer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,22 +54,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "fold 0\n",
+      "37/37 [==============================] - 0s 520us/step - loss: 1.8707 - accuracy: 0.7598 - precision: 0.2155 - recall: 0.1185\n",
+      "0 fold average accuracy is: 75.9757%,average precision is: 21.5517%,average recall is: 11.8483%\n",
+      "fold 1\n",
+      "37/37 [==============================] - 0s 561us/step - loss: 1.2518 - accuracy: 0.7979 - precision: 0.1650 - recall: 0.1037  \n",
+      "1 fold average accuracy is: 79.7918%,average precision is: 16.5049%,average recall is: 10.3659%\n",
+      "fold 2\n",
+      "37/37 [==============================] - 0s 527us/step - loss: 1.0205 - accuracy: 0.8066 - precision: 0.1593 - recall: 0.1233\n",
+      "2 fold average accuracy is: 80.6592%,average precision is: 15.9292%,average recall is: 12.3288%\n",
+      "fold 3\n",
+      "37/37 [==============================] - 0s 516us/step - loss: 1.0365 - accuracy: 0.7971 - precision: 0.1776 - recall: 0.1152\n",
+      "3 fold average accuracy is: 79.7051%,average precision is: 17.7570%,average recall is: 11.5152%\n",
+      "fold 4\n",
+      "37/37 [==============================] - 0s 522us/step - loss: 1.1669 - accuracy: 0.7884 - precision: 0.1546 - recall: 0.0847  \n",
+      "4 fold average accuracy is: 78.8378%,average precision is: 15.4639%,average recall is: 8.4746%\n",
+      "fold 5\n",
+      "37/37 [==============================] - 0s 528us/step - loss: 1.1159 - accuracy: 0.8239 - precision: 0.1176 - recall: 0.0960  \n",
+      "5 fold average accuracy is: 82.3938%,average precision is: 11.7647%,average recall is: 9.6000%\n",
+      "fold 6\n",
+      "37/37 [==============================] - 0s 528us/step - loss: 1.1982 - accuracy: 0.8213 - precision: 0.0935 - recall: 0.0840  \n",
+      "6 fold average accuracy is: 82.1336%,average precision is: 9.3458%,average recall is: 8.4034%\n",
+      "fold 7\n",
+      "36/36 [==============================] - 0s 508us/step - loss: 0.8606 - accuracy: 0.8142 - precision: 0.0821 - recall: 0.1078  \n",
+      "7 fold average accuracy is: 81.4236%,average precision is: 8.2090%,average recall is: 10.7843%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-05-11 02:43:09.306479: W tensorflow/python/util/util.cc:368] Sets are not currently considered sequences, but this may change in the future, so consider avoiding using them.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: NN_models/keras_model_part1_case0/assets\n",
       "(9223, 11)\n",
       "(9223, 1)\n",
-      "8950\n",
-      "273\n",
-      "1043\n",
-      "validation accuracy is: 0.9704000867396726. Successfully detected cancer: 1043 Cancer detection rate: 0.8626964433416047\n",
-      "precision score is: 90.6957%\n",
-      "recall_score is: 86.2696%\n",
-      "f1_score: 88.4273%\n"
+      "8979\n",
+      "244\n",
+      "1057\n",
+      "validation accuracy is: 0.9735443998698905. Successfully detected cancer: 1057 Cancer detection rate: 0.8742762613730356\n",
+      "precision score is: 91.9930%\n",
+      "recall_score is: 87.4276%\n",
+      "f1_score: 89.6522%\n"
      ]
     }
    ],
@@ -113,7 +151,7 @@
     "                # compile the keras model\n",
     "                model.compile(loss='BinaryFocalCrossentropy', optimizer=opt, metrics=['accuracy','Precision','Recall'])\n",
     "                # fit the keras model on the dataset\n",
-    "                model.fit(x_train, y_train, epochs=1000, batch_size=50,verbose=0)\n",
+    "                model.fit(x_train, y_train, epochs=3000, batch_size=50,verbose=0)\n",
     "                # evaluate the keras model\n",
     "                _, accuracy,precision,recall = model.evaluate(x_test, y_test)   \n",
     "\n",
@@ -172,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -182,15 +220,40 @@
       "(9223, 11)\n",
       "(9223, 10)\n",
       "(9223, 21)\n",
+      "fold 0\n",
+      "37/37 [==============================] - 0s 545us/step - loss: 1.9296 - accuracy: 0.7389 - precision: 0.1429 - recall: 0.0853\n",
+      "0 fold average accuracy is: 73.8942%,average precision is: 14.2857%,average recall is: 8.5308%\n",
+      "fold 1\n",
+      "37/37 [==============================] - 0s 529us/step - loss: 1.2427 - accuracy: 0.8005 - precision: 0.1765 - recall: 0.1098  \n",
+      "1 fold average accuracy is: 80.0520%,average precision is: 17.6471%,average recall is: 10.9756%\n",
+      "fold 2\n",
+      "37/37 [==============================] - 0s 534us/step - loss: 1.1356 - accuracy: 0.8196 - precision: 0.1837 - recall: 0.1233  \n",
+      "2 fold average accuracy is: 81.9601%,average precision is: 18.3673%,average recall is: 12.3288%\n",
+      "fold 3\n",
+      "37/37 [==============================] - 0s 554us/step - loss: 1.2235 - accuracy: 0.7806 - precision: 0.1667 - recall: 0.1333\n",
+      "3 fold average accuracy is: 78.0572%,average precision is: 16.6667%,average recall is: 13.3333%\n",
+      "fold 4\n",
+      "37/37 [==============================] - 0s 527us/step - loss: 1.1875 - accuracy: 0.7988 - precision: 0.1687 - recall: 0.0791\n",
+      "4 fold average accuracy is: 79.8786%,average precision is: 16.8675%,average recall is: 7.9096%\n",
+      "fold 5\n",
+      "37/37 [==============================] - 0s 529us/step - loss: 0.9648 - accuracy: 0.8187 - precision: 0.1613 - recall: 0.1600\n",
+      "5 fold average accuracy is: 81.8734%,average precision is: 16.1290%,average recall is: 16.0000%\n",
+      "fold 6\n",
+      "37/37 [==============================] - 0s 519us/step - loss: 1.1333 - accuracy: 0.8387 - precision: 0.1398 - recall: 0.1092  \n",
+      "6 fold average accuracy is: 83.8682%,average precision is: 13.9785%,average recall is: 10.9244%\n",
+      "fold 7\n",
+      "36/36 [==============================] - 0s 534us/step - loss: 0.9968 - accuracy: 0.8438 - precision: 0.1321 - recall: 0.1373  \n",
+      "7 fold average accuracy is: 84.3750%,average precision is: 13.2075%,average recall is: 13.7255%\n",
+      "INFO:tensorflow:Assets written to: NN_models/keras_model_part1_case1/assets\n",
       "(9223, 21)\n",
       "(9223, 1)\n",
-      "8876\n",
-      "347\n",
-      "982\n",
-      "validation accuracy is: 0.962376667028082. Successfully detected cancer: 982 cacner detection rate: 0.8122415219189413\n",
-      "precision score is: 89.1107%\n",
-      "recall_score is: 81.2242%\n",
-      "f1_score: 84.9849%\n"
+      "9043\n",
+      "180\n",
+      "1121\n",
+      "validation accuracy is: 0.9804835736745093. Successfully detected cancer: 1121 cacner detection rate: 0.9272125723738627\n",
+      "precision score is: 92.4155%\n",
+      "recall_score is: 92.7213%\n",
+      "f1_score: 92.5681%\n"
      ]
     }
    ],
@@ -248,7 +311,7 @@
     "                # compile the keras model\n",
     "                model.compile(loss='BinaryFocalCrossentropy', optimizer=opt, metrics=['accuracy','Precision','Recall'])\n",
     "                # fit the keras model on the dataset\n",
-    "                model.fit(x_train, y_train, epochs=1000, batch_size=50,verbose=0)\n",
+    "                model.fit(x_train, y_train, epochs=3000, batch_size=50,verbose=0)\n",
     "                # evaluate the keras model\n",
     "                _, accuracy,precision,recall = model.evaluate(x_test, y_test)   \n",
     "\n",
@@ -306,16 +369,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "289/289 [==============================] - 0s 507us/step - loss: 0.0481 - accuracy: 0.3509 - precision: 0.7042 - recall: 0.4725\n",
-      "[0.04812474921345711, 0.35086196660995483, 0.7042109370231628, 0.47250035405158997]\n",
-      "validation accuracy is: 0.962376667028082. Successfully detected disease: 3445. disease detection rate: 0.4725003428884927 . wrongly diagnosed disease: 1447\n"
+      "fold 0\n",
+      "37/37 [==============================] - 0s 522us/step - loss: 0.8788 - accuracy: 0.1735 - precision: 0.2434 - recall: 0.2391\n",
+      "0 fold average accuracy is: 17.3461%,average precision is: 24.3371%,average recall is: 23.9070%\n",
+      "fold 1\n",
+      "37/37 [==============================] - 0s 506us/step - loss: 0.6774 - accuracy: 0.1882 - precision: 0.2230 - recall: 0.1648\n",
+      "1 fold average accuracy is: 18.8205%,average precision is: 22.2992%,average recall is: 16.4790%\n",
+      "fold 2\n",
+      "37/37 [==============================] - 0s 506us/step - loss: 0.6297 - accuracy: 0.1578 - precision: 0.2063 - recall: 0.1928\n",
+      "2 fold average accuracy is: 15.7849%,average precision is: 20.6273%,average recall is: 19.2785%\n",
+      "fold 3\n",
+      "37/37 [==============================] - 0s 510us/step - loss: 0.6531 - accuracy: 0.1899 - precision: 0.2193 - recall: 0.1915\n",
+      "3 fold average accuracy is: 18.9939%,average precision is: 21.9258%,average recall is: 19.1489%\n",
+      "fold 4\n",
+      "37/37 [==============================] - 1s 543us/step - loss: 0.7828 - accuracy: 0.1605 - precision: 0.1770 - recall: 0.1562\n",
+      "4 fold average accuracy is: 16.0451%,average precision is: 17.6960%,average recall is: 15.6184%\n",
+      "fold 5\n",
+      "37/37 [==============================] - 0s 514us/step - loss: 0.5347 - accuracy: 0.1700 - precision: 0.1873 - recall: 0.1923\n",
+      "5 fold average accuracy is: 16.9991%,average precision is: 18.7287%,average recall is: 19.2308%\n",
+      "fold 6\n",
+      "37/37 [==============================] - 0s 531us/step - loss: 0.5706 - accuracy: 0.1778 - precision: 0.2179 - recall: 0.2275\n",
+      "6 fold average accuracy is: 17.7797%,average precision is: 21.7890%,average recall is: 22.7545%\n",
+      "fold 7\n",
+      "36/36 [==============================] - 0s 500us/step - loss: 0.6463 - accuracy: 0.1736 - precision: 0.1902 - recall: 0.2479\n",
+      "7 fold average accuracy is: 17.3611%,average precision is: 19.0171%,average recall is: 24.7911%\n",
+      "INFO:tensorflow:Assets written to: NN_models/keras_model_part1_case2/assets\n",
+      "validation accuracy is: 0.9804835736745093. Successfully detected disease: 5984. disease detection rate: 0.8207378960362091 . wrongly diagnosed disease: 985\n"
      ]
     }
    ],
@@ -374,7 +460,7 @@
     "                # compile the keras model\n",
     "                model.compile(loss='BinaryFocalCrossentropy', optimizer=opt, metrics=['accuracy','Precision','Recall'])\n",
     "                # fit the keras model on the dataset\n",
-    "                model.fit(x_train, y_train, epochs=1000, batch_size=50,verbose=0)\n",
+    "                model.fit(x_train, y_train, epochs=3000, batch_size=50,verbose=0)\n",
     "                # evaluate the keras model\n",
     "                _, accuracy,precision,recall = model.evaluate(x_test, y_test)   \n",
     "\n",
@@ -429,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -439,9 +525,32 @@
       "(9223, 11)\n",
       "(9223, 10)\n",
       "(9223, 21)\n",
-      "289/289 [==============================] - 0s 511us/step - loss: 0.0446 - accuracy: 0.3420 - precision: 0.8088 - recall: 0.5250\n",
-      "[0.04461338371038437, 0.34197115898132324, 0.8087893724441528, 0.5250308513641357]\n",
-      "validation accuracy is: 0.962376667028082. Successfully detected disease: 3828. disease detection rate: 0.5250308599643396 . wrongly diagnosed disease: 905\n"
+      "fold 0\n",
+      "37/37 [==============================] - 0s 536us/step - loss: 0.8792 - accuracy: 0.1761 - precision: 0.2553 - recall: 0.2353\n",
+      "0 fold average accuracy is: 17.6062%,average precision is: 25.5298%,average recall is: 23.5349%\n",
+      "fold 1\n",
+      "37/37 [==============================] - 0s 512us/step - loss: 0.7416 - accuracy: 0.1899 - precision: 0.2108 - recall: 0.1832\n",
+      "1 fold average accuracy is: 18.9939%,average precision is: 21.0836%,average recall is: 18.3214%\n",
+      "fold 2\n",
+      "37/37 [==============================] - 0s 527us/step - loss: 0.7403 - accuracy: 0.1639 - precision: 0.1793 - recall: 0.1736\n",
+      "2 fold average accuracy is: 16.3920%,average precision is: 17.9278%,average recall is: 17.3619%\n",
+      "fold 3\n",
+      "37/37 [==============================] - 0s 542us/step - loss: 0.9246 - accuracy: 0.1683 - precision: 0.2036 - recall: 0.1722\n",
+      "3 fold average accuracy is: 16.8257%,average precision is: 20.3593%,average recall is: 17.2239%\n",
+      "fold 4\n",
+      "37/37 [==============================] - 0s 550us/step - loss: 0.9755 - accuracy: 0.1587 - precision: 0.1843 - recall: 0.1646\n",
+      "4 fold average accuracy is: 15.8716%,average precision is: 18.4272%,average recall is: 16.4570%\n",
+      "fold 5\n",
+      "37/37 [==============================] - 0s 531us/step - loss: 0.6520 - accuracy: 0.1700 - precision: 0.1952 - recall: 0.1888\n",
+      "5 fold average accuracy is: 16.9991%,average precision is: 19.5181%,average recall is: 18.8811%\n",
+      "fold 6\n",
+      "37/37 [==============================] - 0s 540us/step - loss: 0.5769 - accuracy: 0.1735 - precision: 0.2283 - recall: 0.2204\n",
+      "6 fold average accuracy is: 17.3461%,average precision is: 22.8288%,average recall is: 22.0359%\n",
+      "fold 7\n",
+      "36/36 [==============================] - 0s 542us/step - loss: 0.7437 - accuracy: 0.1736 - precision: 0.1773 - recall: 0.2758\n",
+      "7 fold average accuracy is: 17.3611%,average precision is: 17.7261%,average recall is: 27.5766%\n",
+      "INFO:tensorflow:Assets written to: NN_models/keras_model_part1_case3/assets\n",
+      "validation accuracy is: 0.9804835736745093. Successfully detected disease: 5963. disease detection rate: 0.8178576326978466 . wrongly diagnosed disease: 1087\n"
      ]
     }
    ],
@@ -509,7 +618,7 @@
     "                # compile the keras model\n",
     "                model.compile(loss='BinaryFocalCrossentropy', optimizer=opt, metrics=['accuracy','Precision','Recall'])\n",
     "                # fit the keras model on the dataset\n",
-    "                model.fit(x_train, y_train, epochs=1000, batch_size=50,verbose=0)\n",
+    "                model.fit(x_train, y_train, epochs=3000, batch_size=50,verbose=0)\n",
     "                # evaluate the keras model\n",
     "                _, accuracy,precision,recall = model.evaluate(x_test, y_test)   \n",
     "\n",
