newest bio age model

--- a/project_part2_buildBioAgeModel.ipynb
+++ b/project_part2_buildBioAgeModel.ipynb
@@ -216,7 +216,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(11,)\n",
       "-------------------------------------- CVD ---------------------------------\n",
       "total case: 901\n",
       "CA - BA <= 0 case: 644\n",
@@ -331,6 +330,8 @@
     "mean_CA = np.mean(CA,axis = 0)\n",
     "std_CA = np.std(CA,axis = 0)\n",
     "\n",
+    "#Step 1: Compute the Biological scores (BScore).\n",
+    "#      Bscore = coefficients from PCA × Standardized CT data\n",
     "B_score = np.zeros(ct.shape[0])\n",
     "for i in range (ct.shape[0]):\n",
     "    B_score_current = 0\n",
@@ -338,8 +339,13 @@
     "        B_score_current =  B_score_current + pca.explained_variance_ratio_[j] * (ct[i][j] - mean_ct[j]) / std_ct[j] \n",
     "    B_score[i] =  B_score_current\n",
     "\n",
+    "#   Step 2: Tranfer Bscores to initial BAs.\n",
+    "#      BA’ = (BScore × SDCA ) + MeanCA \n",
     "BA = B_score * std_CA + mean_CA\n",
     "BA_pad = np.column_stack([np.ones(len(BA)), BA]) # add constant column\n",
+    "\n",
+    "# Step 3: Correct initial BAs to avoid overestimations or  underestimations.                 \n",
+    "#      BA = BA’ + (CAi –  MeanCA)(1 – b)\n",
     "reg = LinearRegression().fit(BA_pad,CA)\n",
     "b = reg.coef_[1]\n",
     "Z = (CA - mean_CA) * (1-b)\n",
@@ -362,7 +368,7 @@
     "diseaseNames = np.array([\"CVD\",\"Heart Failure\",\"MI DX\",\"Type 2 Diabetes\",\"Femoral Neck Fracture\"\n",
     "                         ,\"Unspec Femoral Fracture\",\"Forearm Fracture\",\"Humerus Fracture\"\n",
     "                         ,\"Pathologic Fracture\",\"Alzheimers\",\"Cancer\"])\n",
-    "print(diseaseNames.shape)\n",
+    "\n",
     "# anaylze all disease cases\n",
     "for i in range(diseaseNames.shape[0]):\n",
     "    analyze_disease(outcome,CA_original,BA,2 * i + 1,diseaseNames[i])\n",
