newest bioage model

--- a/project_part2_buildBioAgeModel.ipynb
+++ b/project_part2_buildBioAgeModel.ipynb
@@ -13,7 +13,7 @@
    "id": "e29f450a",
    "metadata": {},
    "source": [
-    "## Use clinic outcome data and some related clinic data to calculate a bioage indicator"
+    "## Use clinic outcome data and some related clinic data to calculate the adjusted CA by using risk scores"
    ]
   },
   {
@@ -33,169 +33,169 @@
     "Clininc_Data,Outcome_Data,CT_Data = read_inputs()\n",
     "n_samples = len(Clininc_Data[0])\n",
     "\n",
-    "# Average Life Expectancy in US in 2019 is 78.9 years. Therefore, we will use this as our average biological death age\n",
-    "# The general idea is that, if the Patient died, then we use ( 78.9 - death duration ) to compute biological age\n",
-    "# Otherwise, we follow a rough estimation model to compute biological age\n",
+    "# Average Life Expectancy in US in 2019 is 78.9 years. Therefore, we will use this as our average death age\n",
+    "# The general idea is that, if the Patient died, then we use ( 78.9 - death duration ) to compute adjust_CA\n",
+    "# Otherwise, we follow a rough estimation model to compute adjust_CA\n",
     "\n",
     "ch_age = Clininc_Data[7]    # read patients's chronological age at CT\n",
-    "bio_age_indicator = []                # create a list to store biological age of the patients\n",
+    "adjust_CA = []                # create a list to store biological age of the patients\n",
     "for i in range(n_samples):\n",
-    "    # if the patient has died, we can obtain a rough estimate of biological age by subtract the death duration from 78.9, average life expectancy in the US\n",
+    "    # if the patient has died, we can obtain a rough estimate of adjust_CA by subtract the death duration from 78.9, average life expectancy in the US\n",
     "    if Outcome_Data[0][i] != 0:\n",
-    "        temp_bio_age = round(78.9 - float(Outcome_Data[0][i]/365.0),1)\n",
-    "        bio_age_indicator.append(temp_bio_age)\n",
+    "        cur_adjust_CA = round(78.9 - float(Outcome_Data[0][i]/365.0),1)\n",
+    "        adjust_CA.append(cur_adjust_CA)\n",
     "    else:\n",
     "        diff = abs(ch_age[i] - 78.9)\n",
     "        buff_range = 20\n",
-    "        weighted_sum = 0\n",
-    "        temp_bio_age = 0\n",
+    "        risk_score = 0\n",
+    "        cur_adjust_CA = 0\n",
     "\n",
     "        # if the age of the person is younger than 60, we consider them to be young, and assign light unhealth indicator weight\n",
     "        if ch_age[i] < 60:\n",
     "\n",
     "            # BMI > 30\n",
     "            if Clininc_Data[5][i] == 1:\n",
-    "                weighted_sum = weighted_sum + 0.06\n",
+    "                risk_score = risk_score + 0.06\n",
     "\n",
     "            # FRS 10 year\n",
     "            if Clininc_Data[10][i] > 0.2:\n",
-    "                weighted_sum = weighted_sum + 0.3\n",
+    "                risk_score = risk_score + 0.3\n",
     "            elif Clininc_Data[10][i] > 0.1:\n",
-    "                weighted_sum = weighted_sum + 0.15\n",
+    "                risk_score = risk_score + 0.15\n",
     "            \n",
     "            # FRAX Fx Prob\n",
     "            if Clininc_Data[11][i] > 30:\n",
-    "                weighted_sum = weighted_sum + 0.12\n",
+    "                risk_score = risk_score + 0.12\n",
     "            elif Clininc_Data[11][i] > 10:\n",
-    "                weighted_sum = weighted_sum + 0.06\n",
+    "                risk_score = risk_score + 0.06\n",
     "            \n",
     "            # FRAX Fx Hip Prob\n",
     "            if Clininc_Data[12][i] > 25:\n",
-    "                weighted_sum = weighted_sum + 0.06\n",
+    "                risk_score = risk_score + 0.06\n",
     "            elif Clininc_Data[12][i] > 10:\n",
-    "                weighted_sum = weighted_sum + 0.03\n",
+    "                risk_score = risk_score + 0.03\n",
     "\n",
     "            # Metabolism Syndrome\n",
     "            if Clininc_Data[13][i] == 1:\n",
-    "                weighted_sum = weighted_sum + 0.06\n",
+    "                risk_score = risk_score + 0.06\n",
     "            \n",
     "            # Any cardiovascular problems CVD=stroke, Heart failure, MI=heart attack\n",
     "            if Outcome_Data[1][i] == 1 or Outcome_Data[3][i] == 1 or Outcome_Data[5][i] == 1:\n",
-    "                weighted_sum = weighted_sum + 0.1\n",
+    "                risk_score = risk_score + 0.1\n",
     "\n",
     "            # Diabetes\n",
     "            if Outcome_Data[7][i] == 1:\n",
-    "                weighted_sum = weighted_sum + 0.05\n",
+    "                risk_score = risk_score + 0.05\n",
     "            \n",
     "            # Alzheimer\n",
     "            if Outcome_Data[19][i] == 1:\n",
-    "                weighted_sum = weighted_sum + 0.05\n",
+    "                risk_score = risk_score + 0.05\n",
     "            \n",
     "            # Cancer\n",
     "            if Outcome_Data[21][i] == 1:\n",
-    "                weighted_sum = weighted_sum + 0.2\n",
+    "                risk_score = risk_score + 0.2\n",
     "\n",
-    "            temp_bio_age = ch_age[i] + diff * weighted_sum\n",
+    "            cur_adjust_CA = ch_age[i] + diff * risk_score\n",
     "\n",
     "        elif ch_age[i] > 80: # old person, assign severe unhealth indicator weight\n",
     "            \n",
     "            # BMI > 30\n",
     "            if Clininc_Data[5][i] == 0:\n",
-    "                weighted_sum = weighted_sum + 0.06\n",
+    "                risk_score = risk_score + 0.06\n",
     "\n",
     "            # FRS 10 year\n",
     "            if Clininc_Data[10][i] < 0.1:\n",
-    "                weighted_sum = weighted_sum + 0.3\n",
+    "                risk_score = risk_score + 0.3\n",
     "            elif Clininc_Data[10][i] < 0.2:\n",
-    "                weighted_sum = weighted_sum + 0.15\n",
+    "                risk_score = risk_score + 0.15\n",
     "            \n",
     "            # FRAX Fx Prob\n",
     "            if Clininc_Data[11][i] < 10:\n",
-    "                weighted_sum = weighted_sum + 0.12\n",
+    "                risk_score = risk_score + 0.12\n",
     "            elif Clininc_Data[11][i] < 30:\n",
-    "                weighted_sum = weighted_sum + 0.06\n",
+    "                risk_score = risk_score + 0.06\n",
     "            \n",
     "            # FRAX Fx Hip Prob\n",
     "            if Clininc_Data[12][i] < 10:\n",
-    "                weighted_sum = weighted_sum + 0.06\n",
+    "                risk_score = risk_score + 0.06\n",
     "            elif Clininc_Data[12][i] < 25:\n",
-    "                weighted_sum = weighted_sum + 0.03\n",
+    "                risk_score = risk_score + 0.03\n",
     "\n",
     "            # Metabolism Syndrome\n",
     "            if Clininc_Data[13][i] == 0:\n",
-    "                weighted_sum = weighted_sum + 0.06\n",
+    "                risk_score = risk_score + 0.06\n",
     "            \n",
     "            # Any cardiovascular problems CVD=stroke, Heart failure, MI=heart attack\n",
     "            if Outcome_Data[1][i] == 0 and Outcome_Data[3][i] == 0 and Outcome_Data[5][i] == 0:\n",
-    "                weighted_sum = weighted_sum + 0.1\n",
+    "                risk_score = risk_score + 0.1\n",
     "\n",
     "            # Diabetes\n",
     "            if Outcome_Data[7][i] == 0:\n",
-    "                weighted_sum = weighted_sum + 0.05\n",
+    "                risk_score = risk_score + 0.05\n",
     "            \n",
     "            # Alzheimer\n",
     "            if Outcome_Data[19][i] == 0:\n",
-    "                weighted_sum = weighted_sum + 0.05\n",
+    "                risk_score = risk_score + 0.05\n",
     "            \n",
     "            # Cancer\n",
     "            if Outcome_Data[21][i] == 0:\n",
-    "                weighted_sum = weighted_sum + 0.2\n",
+    "                risk_score = risk_score + 0.2\n",
     "\n",
-    "            temp_bio_age = ch_age[i] - diff * weighted_sum\n",
+    "            cur_adjust_CA = ch_age[i] - diff * risk_score\n",
     "\n",
     "        # if the sample's age is close to US average life expectancy, assign intermediate unhealth indicator weight\n",
     "        else: \n",
     "\n",
     "            # BMI > 30\n",
     "            if Clininc_Data[5][i] != 0:\n",
-    "                weighted_sum = weighted_sum + 0.03\n",
+    "                risk_score = risk_score + 0.03\n",
     "\n",
     "            # FRS 10 year\n",
     "            if Clininc_Data[10][i] > 0.3:\n",
-    "                weighted_sum = weighted_sum + 0.15\n",
+    "                risk_score = risk_score + 0.15\n",
     "            \n",
     "            # FRAX Fx Prob\n",
     "            if Clininc_Data[11][i] > 30:\n",
-    "                weighted_sum = weighted_sum + 0.06\n",
+    "                risk_score = risk_score + 0.06\n",
     "\n",
     "            \n",
     "            # FRAX Fx Hip Prob\n",
     "            if Clininc_Data[12][i] > 25:\n",
-    "                weighted_sum = weighted_sum + 0.03\n",
+    "                risk_score = risk_score + 0.03\n",
     "\n",
     "            # Metabolism Syndrome\n",
     "            if Clininc_Data[13][i] == 1:\n",
-    "                weighted_sum = weighted_sum + 0.03\n",
+    "                risk_score = risk_score + 0.03\n",
     "            \n",
     "            # Any cardiovascular problems CVD=stroke, Heart failure, MI=heart attack\n",
     "            if Outcome_Data[1][i] == 0 and Outcome_Data[3][i] == 0 and Outcome_Data[5][i] == 0:\n",
-    "                weighted_sum = weighted_sum \n",
+    "                risk_score = risk_score \n",
     "            else:\n",
-    "                weighted_sum = weighted_sum + 0.05\n",
+    "                risk_score = risk_score + 0.05\n",
     "\n",
     "            # Diabetes\n",
     "            if Outcome_Data[7][i] == 0:\n",
-    "                weighted_sum = weighted_sum \n",
+    "                risk_score = risk_score \n",
     "            else:\n",
-    "                weighted_sum = weighted_sum + 0.025\n",
+    "                risk_score = risk_score + 0.025\n",
     "            \n",
     "            # Alzheimer\n",
     "            if Outcome_Data[19][i] == 0:\n",
-    "                weighted_sum = weighted_sum \n",
+    "                risk_score = risk_score \n",
     "            else:\n",
-    "                weighted_sum = weighted_sum + 0.025\n",
+    "                risk_score = risk_score + 0.025\n",
     "            \n",
     "            # Cancer\n",
     "            if Outcome_Data[21][i] == 0:\n",
-    "                weighted_sum = weighted_sum \n",
+    "                risk_score = risk_score \n",
     "            else:\n",
-    "                weighted_sum = weighted_sum + 0.1\n",
+    "                risk_score = risk_score + 0.1\n",
     "\n",
-    "            temp_bio_age = ch_age[i] + buff_range * weighted_sum\n",
+    "            cur_adjust_CA = ch_age[i] + buff_range * risk_score\n",
     "\n",
     "\n",
-    "        temp_bio_age = round(temp_bio_age,1)\n",
-    "        bio_age_indicator.append(temp_bio_age)"
+    "        cur_adjust_CA = round(cur_adjust_CA,1)\n",
+    "        adjust_CA.append(cur_adjust_CA)"
    ]
   },
   {
@@ -203,7 +203,7 @@
    "id": "b4a22d5a",
    "metadata": {},
    "source": [
-    "## Use PCA approach to bulid the actual bio age model by using bio age indicator from above part"
+    "## Use PCA approach to bulid the actual bio age model by using adjusted CA as our basis from above part"
    ]
   },
   {
@@ -299,7 +299,7 @@
     "    return\n",
     "\n",
     "Clininc_Data,Outcome_Data,CT_Data = read_inputs()\n",
-    "bio_age_indicator = np.array(bio_age_indicator)\n",
+    "risk_score = np.array(risk_score)\n",
     "\n",
     "ct = np.array(CT_Data)\n",
     "ct = ct.T\n",
@@ -315,7 +315,7 @@
     "\n",
     "CA_original = clinic[:,7] # Original chronic age\n",
     "\n",
-    "CA = bio_age_indicator # Use bio age indicator as our base CA to preform calculation\n",
+    "CA = adjust_CA # Use adjusted CA as our base CA to preform calculation\n",
     "\n",
     "mean_ct = np.mean(ct,axis = 0)\n",
     "std_ct = np.std(ct,axis = 0)\n",
