newest bioage model

--- a/project_part2_buildBioAgeModel.ipynb
+++ b/project_part2_buildBioAgeModel.ipynb
@@ -299,7 +299,7 @@
     "    return\n",
     "\n",
     "Clininc_Data,Outcome_Data,CT_Data = read_inputs()\n",
-    "risk_score = np.array(risk_score)\n",
+    "adjust_CA = np.array(adjust_CA)\n",
     "\n",
     "ct = np.array(CT_Data)\n",
     "ct = ct.T\n",
