--- a/project_part2_buildBioAgeModel.ipynb
+++ b/project_part2_buildBioAgeModel.ipynb
@@ -38,7 +38,7 @@
     "# Otherwise, we follow a rough estimation model to compute adjust_CA\n",
     "\n",
     "ch_age = Clininc_Data[7]    # read patients's chronological age at CT\n",
-    "adjust_CA = []                # create a list to store biological age of the patients\n",
+    "adjust_CA = []                # create a list to store adjust_CA of the patients\n",
     "for i in range(n_samples):\n",
     "    # if the patient has died, we can obtain a rough estimate of adjust_CA by subtract the death duration from 78.9, average life expectancy in the US\n",
     "    if Outcome_Data[0][i] != 0:\n",
